--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -1,8 +1,8 @@
 name: Process
 on:
   schedule:
-    - cron: "05 03 * * *"
-    - cron: "05 11 * * *"
+    - cron: "05 03 2 * *"
+    - cron: "05 11 25 * *"
   workflow_dispatch:
 
 env:
